Fix css code spacing

--- a/public/styles/puzzle.css
+++ b/public/styles/puzzle.css
@@ -10,10 +10,6 @@ body {
     font-family: "Verdana", sans-serif;
 }
 
-html {
-    /* overflow:hidden; */
-}
-
 #transition-full {
     position:absolute;
     bottom:0;
